# ecasd-enrollment

./: .env  .gitignore  .tool-versions  Enrollment Data Analysis.ipynb  LICENSE  Linear Regression of Yearly District Kindergarten Enrollment and Births Five Years Prior.ipynb  Linear Regression of Yearly School Population and Classroom Usage.ipynb  Pipfile  README.md  Third Friday.ods  capacity-vs-classrooms.py  generate-students-per-classroom-histogram.py  linear-regression-of-births-to-kindergarten-enrollment.py  linear-regression-of-previous-years-enrollment-to-kindergarten-enrollment.py  linear-regression-of-school-population-to-classroom-count.py  ols-regression.py  over-or-under-capacity.sql  per-school-cohort-size-distribution.py  per-school-grade-size-distribution.py  predicted-number-of-kindergarteners-graph.py  predicted-per-school-kindergarteners.py  predicted-share-by-grade-graph.py  pyproject.toml  stats.sqlite  students-vs-classrooms-per-school.py
artifacts/linear-regression-of-school-population-to-classroom-count/: Davey.txt  Flynn.txt  Lakeshore.txt  Locust Lane.txt  Longfellow.txt  Manz.txt  Meadowview.txt  Northwoods.txt  Putnam Heights.txt  Robbins.txt  Roosevelt.txt  Sherman.txt
data/: Third Friday.ods  __init__.py  enrollment_info.py  kindergarten.py
linear-regression-of-school-population-to-classroom-count/: README.md  generate.py
linear-regression-of-school-population-to-classroom-count/artifacts/: Davey.txt  Flynn.txt  Lakeshore.txt  Locust Lane.txt  Longfellow.txt  (+7 more)
linear_regression_of_school_population_to_classroom_usage/: generate.py
(+8 files in other folders)
