[project]
name = "ecasd-enrollment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Justin Hendrickson", email = "justin.hendrickson@thebernardgroup.com" }
]
requires-python = ">=3.8"
dependencies = [
    "fastexcel>=0.12.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.7.5",
    "pandas<2",
    "patsy>=1.0.1",
    "polars>=1.8.2",
    "pyexcel-ods3>=0.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.1",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "notebook>=7.3.3",
    "pylint>=3.2.7",
]
